-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 3.1.1
-
None
-
9b6d4573aa494851939f775ce6a5c861968182cd
Also Find Usages doesn't find such usages. Autocompletion and member highlighting does work though.
"using namespace Ns" works as expected.
foo.h:
namespace Ns { struct Foo { int bar; }; }
using Ns::Foo;
main.cpp:
#include "foo.h" void func() { Foo foo; // Foo not highlighted foo.bar = 42; // bar highlighted, autocompletion works }
For Gerrit Dashboard: QTCREATORBUG-12357 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
87046,2 | C++: fix 'using' in separate file(header) | 3.1 | qt-creator/qt-creator | Status: ABANDONED | -1 | 0 |
87055,4 | C++: fix 'using' in separate block of scope | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |